# coinjure

./: .env.example  .gitignore  .pre-commit-config.yaml  CLI_IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  README.md  index.html  mkdocs.yml  polymarket_paper_strategy.py  pyproject.toml  run_live_multi.py
.claude/: settings.local.json
.github/workflows/: docs.yml  isort.yml
.venv311/: pyvenv.cfg
blog/: gen_pie.py  index.html
coinjure/: __init__.py  events.py  ticker.py
coinjure/alerts/: __init__.py  alerter.py  telegram_alerter.py
coinjure/analytics/: performance_analyzer.py
coinjure/backtest/: backtester.py
coinjure/cli/: __init__.py  agent_commands.py  arb_commands.py  arb_helpers.py  cli.py  control.py  data_commands.py  engine_commands.py  hub_commands.py  market_commands.py  memory_commands.py  monitor.py  news_commands.py  portfolio_commands.py  research_commands.py  research_helpers.py  strategy_commands.py  textual_monitor.py  token.py  trade_commands.py  utils.py
coinjure/config/: __init__.py
coinjure/core/: trading_engine.py
coinjure/data/: composite_data_source.py  data_manager.py  data_source.py  fetcher.py  manager.py  market_data_manager.py  news.py  order_book.py  source.py
coinjure/engine/: backtester.py  control.py  engine.py  live_trader.py  mock_mode.py  monitoring.py  multi_strategy_engine.py  performance.py  registry.py  runner.py  trading_engine.py
coinjure/events/: events.py
coinjure/hub/: demo_hub.py  hub.py  subscriber.py
coinjure/live/: live_trader.py
coinjure/market/: auto_discover.py  auto_pair.py  composite_data_source.py  data_source.py  discovery.py  market_data_manager.py  market_model.py  relations.py  validation.py
coinjure/mock/: mock_mode.py
coinjure/portfolio/: __init__.py
coinjure/position/: position_manager.py
coinjure/research/: __init__.py  ledger.py
coinjure/risk/: risk_manager.py
coinjure/storage/: __init__.py  serializers.py  state_store.py
coinjure/strategy/: __init__.py  agent.py  agent_strategy.py  demo.py  demo_strategy.py  loader.py  market_making_strategy.py  momentum_mean_reversion_strategy.py  orderbook_imbalance_strategy.py  quant_strategy.py  relation_mixin.py  simple_strategy.py  strategy.py  test_strategy.py
coinjure/ticker/: ticker.py
coinjure/trader/: kalshi_trader.py  paper_trader.py  polymarket_trader.py  trader.py  types.py
coinjure/trading/: allocator.py  kalshi_trader.py  llm_allocator.py  llm_sizing.py  paper_trader.py  polymarket_trader.py  position.py  position_manager.py  risk.py  risk_manager.py  sizing.py  trader.py  types.py
data/: backtest_sample.jsonl
data/kalshi-live/: fomc_arb.py  fomc_arb_monitor.py  launch_kalshi_live.py  launch_kalshi_live_v2.py  report_status.py
docs/: 404.html  CLI_MONITORING.html  CLI_MONITORING.md  CLI_QUICK_START.html  CLI_QUICK_START.md  LLM_ALLOCATION_DESIGN.html  LLM_ALLOCATION_DESIGN.md  LLM_ALLOCATION_STRATEGY_PLAN.md  PROJECT_SPECIFICATION.html  PROJECT_SPECIFICATION.md  index.html  index.md  sitemap.xml
docs/api/: data.html  data.md  engine.html  engine.md  index.html  index.md  relations.html  relations.md  strategy.html  strategy.md  trading.html  trading.md
docs/blog/: index.html  index.md
docs/overrides/: main.html
docs/plans/: 2026-03-09-batch-paper-live-trading-design.html  2026-03-09-batch-paper-live-trading-design.md  2026-03-09-batch-paper-live-trading.html  2026-03-09-batch-paper-live-trading.md  2026-03-09-group-relation-design.html  2026-03-09-group-relation-design.md  2026-03-09-group-relation-plan.html  2026-03-09-group-relation-plan.md  2026-03-10-hub-ticker-filtering.html  2026-03-10-hub-ticker-filtering.md
docs/posts/: hello-world.md
docs/search/: search_index.json
docs/stylesheets/: custom.css
examples/: backtest_example.py  cross_platform_arb_example.py  custom_strategy_example.py  demo_monitor.py  live_paper_trading_example.py  monitor_example.py  multi_leg_arb_backtest.py  performance_analysis_example.py
examples/data/: nba_cross_platform_data.json
examples/strategies/: cross_platform_arb_strategy.py  direct_arb_strategy.py  event_sum_arb_strategy.py  multi_leg_arb_strategy.py  openai_related_market_agent_strategy.py  orderbook_pressure_strategy.py  related_market_agent_strategy.py  relation_spread_strategy.py  spread_arb_strategy.py  threshold_momentum_strategy.py
pm_cli/: __init__.py
pm_cli/alerts/: __init__.py  alerter.py  telegram_alerter.py
pm_cli/analytics/: performance_analyzer.py
pm_cli/backtest/: backtester.py
pm_cli/cli/: agent_commands.py  analytics_commands.py  cli.py  control.py  data_commands.py  monitor.py  news_commands.py  research_commands.py  textual_monitor.py  token.py  trade_commands.py  utils.py
pm_cli/config/: __init__.py
pred_market_cli/: __init__.py
scripts/: crawl_cross_platform_data.py  get_live_data.py  get_live_news_data.py  get_live_polymarket_data.py  record_demo.sh  run_cross_platform_arb_backtest.py  run_kalshi_paper_test.py  run_llm_backtest.py  run_llm_news_simulation.py  run_multi_backtest.py  run_paper_trading.py  start-lab.sh
strategies/: mean_rev_dip_v1.py  mean_rev_dip_v1_runbook_20260227.md  trend_momentum_v1.py
tests/: test_agent_cli.py  test_agent_strategy_sdk.py  test_alerter.py  test_allocator.py  test_auto_discover.py  test_auto_pair.py  test_backtester.py  test_cli_run.py  test_config.py  test_control_server_yield.py  test_data_manager.py  test_demohub_e2e.py  test_engine_p0.py  test_events.py  test_fuzzy_match.py  test_google_news_data_source.py  test_group_arb_strategy.py  test_historical_data_source.py  test_hub_ticker_filter.py  test_hub_watch_token.py  test_init.py  test_live_trader_wiring.py  test_llm_allocator.py  test_llm_sizing.py  test_market_data_manager.py  test_order_book.py  test_order_result_contract.py  test_p0_guards.py  test_paper_trader.py  test_performance_analyzer.py  test_position_manager.py  test_quant_strategies.py  test_relations.py  test_research_cli.py  test_risk_manager.py  test_state_store.py  test_strategy_triggers.py  test_ticker.py  test_token_cli.py  test_trade_cli.py  (+2 more)
(+751 files in other folders)
