[tool.poetry]
name = "coinjure"
version = "0.1.1"
description = "A trading agent harness for prediction markets"
authors = ["Haofei Yu <yuhaofei44@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ulab-uiuc/coinjure"
homepage = "https://ulab-uiuc.github.io/coinjure"
keywords = [
    "polymarket",
    "kalshi",
    "trading",
    "prediction-market",
    "llm",
    "backtesting",
    "algorithmic-trading",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
packages = [{include = "coinjure"}]


[tool.poetry.dependencies]
python = ">=3.10, <4.0"
beartype = "^0.17.1"
pydantic = "^2.8.2"
py-clob-client = "*"
click = "^8.1.7"
rich = "^13.7.0"
httpx = ">=0.24.0"
openai = ">=1.0.0"
openai-agents = "*"
feedparser = ">=6.0.0"
requests = ">=2.28.0"
beautifulsoup4 = ">=4.12.0"
tenacity = ">=8.2.0"
textual = ">=0.50.0"
kalshi-python = "*"
cryptography = "*"
litellm = {version = ">=1.0.0", optional = true}
pyarrow = {version = ">=14.0.0", optional = true}
statsmodels = {version = ">=0.14.0", optional = true}
scipy = {version = ">=1.11.0", optional = true}

[tool.poetry.extras]
llm = ["litellm"]
parquet = ["pyarrow"]
quant = ["statsmodels", "scipy"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
nbmake = "^1.5.0"
types-setuptools = "^69.0.0.0"
types-requests = "^2.31.0"
ruff = "^0.3.0"
commitizen = "^3.14.1"
mypy = "^1.15.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.15.1"
hypothesis = "^6.98.0"

[tool.poetry.scripts]
coinjure = "coinjure.cli.cli:cli"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = false
follow_imports = "normal"
strict = false
plugins = ["pydantic.mypy"]
warn_redundant_casts = false
warn_unused_ignores = false
strict_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = false
exclude = "(examples/|scripts/|tests/)"

[[tool.mypy.overrides]]
module = [
    "coinjure.events",
    "coinjure.engine.performance",
    "coinjure.data.manager",
    "coinjure.data.live.polymarket",
    "coinjure.data.live.kalshi",
    "coinjure.engine.trader.kalshi",
    "coinjure.engine.trader.paper",
    "coinjure.engine.engine",
    "coinjure.engine.backtester",
]
disable_error_code = ["assignment", "operator", "arg-type", "return-value", "attr-defined", "override", "var-annotated", "func-returns-value", "import-untyped", "misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=coinjure --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["coinjure"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError:",
]

[tool.codespell]
ignore-words-list = "dout, te, indicies, astroid"
skip = ["data", ".git", "*.pyc", "*.csv", "*.json"]
quiet-level = 3

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
"coinjure/data/live/polymarket.py" = ["C901"]
"coinjure/cli/engine_commands.py" = ["C901"]
"coinjure/cli/monitor.py" = ["C901"]
"scripts/*" = ["C901"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version"
version_files = [
    "pyproject.toml:version",
    "coinjure/__init__.py:__version__"
]

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
